[package]
name = "rheretic"
version = "0.1.0"
authors = ["olson-dan <olson-dan@users.noreply.github.com>"]
edition = "2018"

[dependencies]
failure = "0.1.5"
piston = "0.48.0"
piston_window = "0.99.0"
piston2d-opengl_graphics = "0.65.0"
image = "0.21.2"
byteorder = "1.3.2"
specs = "0.15.0"
specs-derive = "0.4.0"
